显示登录用户搜索玩家的历史记录 (#73)
