# api-system/router/routers.go
@@ -52,6 +52,7 @@ func setRouterV1(r *gin.Engine) {
 			user.POST("/logout", middleware.AuthCheck(), v1.UserLogout)
 			user.POST("/value/exist", v1.IsKeyFieldValueExist)
 			user.POST("/info", v1.UserInfo)
+			user.GET("/wt_query/history", middleware.AuthCheck(), v1.GetUserWTQueryHistory)
 		}
 		system := groupV1.Group("/system")
 		{
@@ -77,7 +78,7 @@ func setRouterV1(r *gin.Engine) {
 		warThunder := groupV1.Group("/war_thunder")
 		{
 			warThunder.GET("/userinfo/queries", v1.GetUserInfoQueries)
-			warThunder.POST("/userinfo/refresh", v1.PostUserInfoRefresh)
+			warThunder.POST("/userinfo/refresh", middleware.AuthCheck(), v1.PostUserInfoRefresh)
 			warThunder.GET("/userinfo", v1.GetUserInfo)
 			warThunder.GET("/userinfo/query/count", v1.GetQueryCount)
 			// warThunder.StaticFile("/mock.html", "./resources/index.html")
